--- a/index.html
+++ b/index.html
@@ -6,13 +6,46 @@
     <title>Document</title>
     <link rel="stylesheet" href="./src/styles/main.scss" />
   </head>
-  <body id="app-wrapper" class="theme-white co--page--drawer">
+  <body id="app-wrapper" class="theme-white">
+    <div class="co--page--drawer">
     <header>
-      header
+      <div class="co--tile mb-3">
+          header
+      </div>
     </header>
     
-    <div class="co--page--drawer-left">
-      left
+    <div class="co--page--drawer__left">
+      <div class="co--side-nav">
+        <div class="co--side-nav__items">
+          <div class="co--side-nav__item">
+            <div class="co--side-nav__link co--side-nav__link--current">
+              <div class="co--side-nav__icon">
+                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true">
+                  <path
+                    d="M8.24 25.14L7 26.67a14 14 0 0 0 4.18 2.44l.68-1.88a12 12 0 0 1-3.62-2.09zm-4.05-7.07l-2 .35A13.89 13.89 0 0 0 3.86 23l1.73-1a11.9 11.9 0 0 1-1.4-3.93zm7.63-13.31l-.68-1.88A14 14 0 0 0 7 5.33l1.24 1.53a12 12 0 0 1 3.58-2.1zM5.59 10L3.86 9a13.89 13.89 0 0 0-1.64 4.54l2 .35A11.9 11.9 0 0 1 5.59 10zM16 2v2a12 12 0 0 1 0 24v2a14 14 0 0 0 0-28z" />
+                </svg>
+              </div>
+              <span class="co--side-nav__link-text">
+                Left item
+              </span>
+            </div>
+          </div>
+
+          <div class="co--side-nav__item">
+            <div class="co--side-nav__link">
+              <div class="co--side-nav__icon">
+                <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true">
+                  <path
+                    d="M8.24 25.14L7 26.67a14 14 0 0 0 4.18 2.44l.68-1.88a12 12 0 0 1-3.62-2.09zm-4.05-7.07l-2 .35A13.89 13.89 0 0 0 3.86 23l1.73-1a11.9 11.9 0 0 1-1.4-3.93zm7.63-13.31l-.68-1.88A14 14 0 0 0 7 5.33l1.24 1.53a12 12 0 0 1 3.58-2.1zM5.59 10L3.86 9a13.89 13.89 0 0 0-1.64 4.54l2 .35A11.9 11.9 0 0 1 5.59 10zM16 2v2a12 12 0 0 1 0 24v2a14 14 0 0 0 0-28z" />
+                </svg>
+              </div>
+              <span class="co--side-nav__link-text">
+                Left item 2
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <main class="co--grid">
       <div class="co--tile">
@@ -105,14 +138,13 @@
         </div>
       </div>
     </main>
-    <div class="co--page--drawer-left">
-      right
-    </div>
 
     <footer>
+      <div class="co--tile mt-3">
       footer
+      </div>
     </footer>
-    
+  </div>
     <script src="./index.js"></script>
   </body>
 </html>
