--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../src/styles/main.scss" />
+    <style>
+      /**For the sake of clearity at the examples*/
+      .co--form-item {
+        margin-bottom: 2rem;
+      }
+    </style>
   </head>
   <body id="app-wrapper" class="theme-g10">
     <div class="co--page--drawer">
@@ -31,7 +37,10 @@
         </div>
       </div>
       <main>
-        <div id="dynamic-content-container" class="p-3 fill-height overflow-auto"></div>
+        <div
+          id="dynamic-content-container"
+          class="p-3 fill-height overflow-auto"
+        ></div>
       </main>
     </div>
     <script src="./index.js"></script>
