menu and modals

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
       <main>
         <div
           id="dynamic-content-container"
-          class="p-3 fill-height overflow-auto"
+          class="px-3 fill-height overflow-auto"
         ></div>
       </main>
     </div>
