--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     </style>
   </head>
   <body id="app-wrapper" class="theme-g10">
-    <div class="co--page--drawer">
+    <div class="co--page--drawer grid-gap-3">
       <header>
-        <div class="co--tile mb-3">
+        <div class="co--tile">
           <div class="co--row">
             <div class="co--col co--col--auto">
               <h4>CoMED UI</h4>
